--- a/git-gerrit.1.html
+++ b/git-gerrit.1.html
@@ -149,7 +149,7 @@ open a browser.</p></li>
 
 <h2 id="COMMANDS">COMMANDS</h2>
 
-<p>If no command is given, <code>git gerrit review</code> is the default action.</p>
+<p>If no command is given, <code>git-gerrit review</code> is the default action.</p>
 
 <dl>
 <dt><code>review</code> [branch:<var>project branch</var>] [topic:<var>patch topic</var>] [type:<var>review|draft</var>]</dt><dd><p>  Sends all local commits to Gerrit for review.</p>
@@ -164,7 +164,7 @@ open a browser.</p></li>
   them to your working copy of the tree. Any conflicts will result the
   <code>git am</code> session being halted, and <code>git-gerrit</code> will quit, printing
   the location of the failed patches.</p></dd>
-<dt class="flush"><code>pull</code></dt><dd><p>  An alias for <code>pull</code>.</p></dd>
+<dt class="flush"><code>pull</code></dt><dd><p>  An alias for <code>get</code>.</p></dd>
 <dt><code>-2</code>, <code>-1</code>, <code>0</code>, <code>+1</code>, <code>+2</code> <var>patches</var></dt><dd><p>  Apply the corrisponding Code-Review to each patch given.</p></dd>
 <dt><code>submit</code> <var>patches</var></dt><dd><p>  Submit each patch given to the upstream copy of the repository.</p></dd>
 <dt><code>retest</code> <var>patches</var></dt><dd><p>  Apply Retest+1 to each patch given. This probably only does anything
@@ -235,7 +235,7 @@ such as your Gerrit username should be set in Git's configuration.</p>
 
 <h2 id="COPYRIGHT">COPYRIGHT</h2>
 
-<p>Written by Kylie McClain <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#111;&#109;&#x61;&#x73;&#105;&#115;&#x40;&#101;&#x78;&#104;&#x65;&#114;&#x62;&#x6f;&#x2e;&#x6f;&#x72;&#x67;" data-bare-link="true">&#x73;&#x6f;&#x6d;&#x61;&#115;&#x69;&#115;&#64;&#101;&#x78;&#x68;&#101;&#x72;&#x62;&#111;&#46;&#111;&#x72;&#103;</a></p>
+<p>Written by Kylie McClain <a href="&#109;&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x73;&#111;&#x6d;&#97;&#x73;&#x69;&#x73;&#64;&#101;&#x78;&#104;&#x65;&#x72;&#98;&#111;&#x2e;&#x6f;&#114;&#103;" data-bare-link="true">&#115;&#x6f;&#109;&#97;&#115;&#105;&#x73;&#x40;&#x65;&#120;&#104;&#101;&#114;&#x62;&#111;&#46;&#111;&#x72;&#103;</a></p>
 
 <p><a href="https://github.com/Somasis/git-gerrit" data-bare-link="true">https://github.com/Somasis/git-gerrit</a></p>
 
@@ -243,7 +243,7 @@ such as your Gerrit username should be set in Git's configuration.</p>
 
 <p>Licensed under the ISC license.</p>
 
-<p>Copyright (c) 2015 Kylie McClain <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#111;&#58;&#x73;&#x6f;&#x6d;&#97;&#115;&#x69;&#x73;&#64;&#101;&#x78;&#x68;&#101;&#x72;&#98;&#x6f;&#46;&#111;&#x72;&#x67;" data-bare-link="true">&#115;&#x6f;&#x6d;&#x61;&#115;&#105;&#115;&#64;&#101;&#120;&#104;&#101;&#114;&#x62;&#111;&#46;&#x6f;&#x72;&#103;</a></p>
+<p>Copyright (c) 2015 Kylie McClain <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#58;&#x73;&#111;&#x6d;&#x61;&#x73;&#x69;&#115;&#x40;&#101;&#x78;&#x68;&#x65;&#114;&#x62;&#x6f;&#46;&#x6f;&#x72;&#x67;" data-bare-link="true">&#x73;&#111;&#x6d;&#97;&#115;&#x69;&#115;&#x40;&#x65;&#120;&#104;&#x65;&#x72;&#x62;&#111;&#x2e;&#111;&#114;&#x67;</a></p>
 
 <p>Permission to use, copy, modify, and/or distribute this software for any
 purpose with or without fee is hereby granted, provided that the above
